fix table scrollbar

--- a/src/components/MyOpenOrders.scss
+++ b/src/components/MyOpenOrders.scss
@@ -25,12 +25,59 @@ $overlay: rgba(130,130,130,.1);
     text-transform: uppercase;
     font-size: .8rem;
     font-weight: bold;
+    margin-bottom: 10px;
   }
   .body {
     display: flex;
     flex-grow: 1;
     .not-available, .not-available > div {
       height: 100%;
+    }
+  }
+  .actions {
+    display: flex;
+    .action {
+      margin-right: 10px;
+      text-transform: capitalize;
+      cursor: pointer;
+      transition: color 300ms ease;
+      &:last-child {
+        margin-right: 0px;
+      }
+    }
+  }
+  .pill {
+    box-sizing: border-box;
+    text-align: center;
+    border-radius: .25rem;
+    color: $dark-text;
+    &.deposit, &.withdraw {
+      width: 90px;
+    }
+    &.buy, &.sell {
+      width: 50px;
+    }
+    &.deposit, &.buy {
+      background-color: $buy;
+    }
+    &.withdraw, &.sell {
+      background-color: $sell;
+    }
+  }
+  &.light {
+    .action {
+      color: $light-primary;
+      &:hover {
+        color: $light-primary-shade;
+      }
+    }
+  }
+  &.dark {
+    .action {
+      color: $dark-primary;
+      &:hover {
+        color: $dark-primary-shade;
+      }
     }
   }
 }
